--- a/index.html
+++ b/index.html
@@ -96,6 +96,31 @@
 
     <!-- Contato -->
 
+    <!-- Rodapé -->
+    <footer id="footer">
+      <div class="location">
+        <h4>LOCALIZAÇÃO</h4>
+        <p>Vila Maria do Carmo Benevides, 57. <br />Pacatuba - CE</p>
+      </div>
+
+      <div class="social-media">
+        <h4>SIGA NAS REDES SOCIAIS</h4>
+        <div class="medias">
+          <div class="whatsapp">
+            <img src="./assets/img/whatsapp.svg" />
+            <p>(85) 9 8101-5946</p>
+          </div>
+
+          <div class="instagram">
+            <img src="./assets/img/instagram.svg" />
+            <p>@philipeoliveira</p>
+          </div>
+        </div>
+      </div>
+    </footer>
+
+    <!-- Rodapé -->
+
     <script>
       feather.replace();
     </script>
